初始化页面

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,7 +1,7 @@
 ---
-name: 艾苦酒.
+name: 一个瓦笔前端.
 avatar: /static/images/avatar.png
-occupation: 一个瓦笔前端
+occupation: 看不懂，学不会，记不住
 company: 记录 分享 成长
 ---
 
